# waterwall

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: pages.yml
deploy/: cloudflare-pages.md  waterwall-tui
deploy/ca/: generate_ca.ps1  generate_ca.sh
deploy/caddy/: APPS.md  Caddyfile  README.md  cloudflared.yml.example  (+2 more)
docs/: claude-md-insert.md  deploy.md  monitor.md  runbook.md  threat-model.md
site/: build.py  config.yaml  nav.yaml
tests/: conftest.py  test_addon.py  test_addon_audit.py  test_addon_chain_failure.py  test_addon_failclosed.py  test_addon_fence_bodies.py  test_addon_outbound.py  test_addon_round_trip.py  test_addon_sse_dispatch.py  test_admin.py  test_ca_generator.py  test_ca_validator.py  test_chain_basic.py  test_chain_checkpoint.py  test_chain_mixed_host.py  test_chain_resume.py  test_cli_dispatcher.py  test_cli_regen_ca.py  test_cli_rotate_chain.py  test_config_loader.py  test_evidence_bundle.py  test_frameworks.py  test_idle_watcher.py  test_install_seed.py  test_kb_build.py  test_killswitch.py  test_manifest.py  test_meta_log_safe.py  test_nssm_service_scripts.py  test_pattern_hot_reload.py  test_pattern_loader.py  test_patterns.py  test_pem_round_trip.py  test_permitted_hosts.py  test_pre_launch_hook.py  test_receipt.py  test_signer.py  test_sse_openai.py  test_sse_parser.py  test_sse_pem_round_trip.py  (+30 more)
tools/: test-iam-roundtrip.sh  v2-agent-auth-capture.sh  v2-classify-auth.py  verify-deploy.sh
(+114 files in other folders)
