[project]
name = "waterwall"
version = "0.1.0-dev"
description = "Reversible-tokenization egress proxy for Claude Code"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
  "mitmproxy==12.2.2",
  "cryptography>=43.0",
  "textual==0.85",
  "httpx==0.27",
  "starlette==0.41",
  "uvicorn==0.32",
  "pyyaml>=6.0.2",
  "inotify_simple==1.3.5; sys_platform=='linux'",
  "watchdog==6.0; sys_platform=='win32'",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3",
  "pytest-asyncio==0.24",
  "pytest-httpx==0.32",
  "ruff==0.7",
  "mypy==1.13",
]
docs = [
  "markdown>=3.6",
  "pygments>=2.17",
  "jinja2>=3.1",
  "pyyaml>=6.0",
]

[project.scripts]
waterwall = "waterwall.cli.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

# Ship the webgui static files inside the installed waterwall package so
# `build_admin_app(static_dir=...)` can mount them from site-packages.
# Scope to page assets only — test files and README are not served.
[tool.setuptools.package-data]
waterwall = ["webgui/index.html", "webgui/app.js", "webgui/styles.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"
